--- a/templates/graphql/node/resolvers/queries/first-query.ts.ejs
+++ b/templates/graphql/node/resolvers/queries/first-query.ts.ejs
@@ -1,3 +1,3 @@
-export async function firstQuery(_: void, __: undefined, ctx: Context) {
+export async function firstQuery(_: void, __: undefined, _ctx: Context) {
     return "First query response";
 }
