Removed unused imports, added pixel events types

--- a/templates/node/index.ts.ejs
+++ b/templates/node/index.ts.ejs
@@ -1,4 +1,4 @@
-import { ClientsConfig, LRUCache, method, Service } from '@vtex/api'
+import { ClientsConfig, method, Service } from '@vtex/api'
 
 import { firstRoute } from './resolvers/routes'
 <% if(graphql) { %>import Mutations from './resolvers/mutations'
